syntax = "proto3";

option java_package = "com.example.grpc";
option java_multiple_files = true;

service MyService {
  rpc GetItem (GetItemRequest) returns (GetItemResponse);
  rpc PostItem (PostItemRequest) returns (PostItemResponse);
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  string id = 1;
  string content = 2;
}

message PostItemRequest {
  string content = 1;
}

message PostItemResponse {
  string id = 1;
  string status = 2;
}
